plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'maven-publish'
}

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

sourceSets {
    examples {
        java {
            compileClasspath += main.output + main.compileClasspath
            runtimeClasspath += compileClasspath
        }
    }
}

dependencies {
    implementation 'com.google.guava:guava:26.0-jre'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.jetbrains:annotations:19.0.0'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

java {
    withSourcesJar()
    withJavadocJar()
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

javadoc {
    source = sourceSets.main.allJava
    classpath = sourceSets.main.runtimeClasspath
}


